Azure-Networking-01/resources/NetworkSecurityGroups.json
//New-AzResourceGroupDeployment -resourceGroup $rg.resourceGroupName -templatefile ./NetworkSecurityGroups.json -templateparameterfile ./NetworkSecurityGroups.parameters.json

{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "hubAddressPrefix": {
            "type": "string",
            "metadata": {
                "description": "Hub Virtual Network Address Prefix"
            },
            "defaultValue": "10.0.0.0/16"
        },
        "onpremAddressPrefix": {
            "type": "string",
            "metadata": {
                "description": "Spoke1 Virtual Network Address Prefix"
            },
            "defaultValue": "172.16.0.0/16"
        }
    },
    "functions": [],
    "variables": {},
    "resources": [
        {
            "copy": {
                "name": "nsg-copy",
                "count": 4
            },
            "name": "[format('nsg-deployment-{0}', copyIndex())]",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2024-07-01",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "variables": {},
                    "resources": [
                        {
                            "condition": "[equals(copyIndex(), 0)]",
                            "name": "[format('nsg-{0}', copyIndex())]",
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2024-03-01",
                            "location": "[resourceGroup().location]",
                            "properties": {
                                "securityRules": [
                                    {
                                        "name": "Allow-RDP",
                                        "properties": {
                                            "description": "Allow-RDP",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "3389",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 300,
                                            "direction": "Inbound"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "condition": "[equals(copyIndex(), 1)]",
                            "name": "[format('nsg-{0}', copyIndex())]",
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2024-03-01",
                            "location": "[resourceGroup().location]",
                            "properties": {
                                "securityRules": [
                                    {
                                        "name": "Allow-RDP",
                                        "properties": {
                                            "description": "Allow-RDP",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "3389",
                                            "sourceAddressPrefixes": [
                                                "[parameters('onpremAddressPrefix')]"
                                            ],
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 300,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "Allow-HTTP",
                                        "properties": {
                                            "description": "Allow-HTTP",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "80",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 310,
                                            "direction": "Inbound"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "condition": "[greater(copyIndex(), 1)]",
                            "name": "[format('nsg-{0}', copyIndex())]",
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2024-03-01",
                            "location": "[resourceGroup().location]",
                            "properties": {
                                "securityRules": [
                                    {
                                        "name": "Allow-RDP",
                                        "properties": {
                                            "description": "Allow-RDP",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "3389",
                                            "sourceAddressPrefixes": [
                                                "[parameters('onpremAddressPrefix')]", 
                                                "[parameters('hubAddressPrefix')]"
                                            ],
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 300,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "Allow-HTTP",
                                        "properties": {
                                            "description": "Allow-HTTP",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "80",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 310,
                                            "direction": "Inbound"
                                        }
                                    }
                                ]
                            }
                        }
                    ],
                    "outputs": {}
                }
            }
        }
    ],
    "outputs": {}
}
